--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hover-video-player": "^8.1.4",
+    "react-responsive": "^9.0.0-beta.3",
     "react-scripts": "4.0.3",
+    "sass": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
